Minor fix.